<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cascadia</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="enter">Enter</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="new_user">New User</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="title_activity_newUser">New User Registration</string>
    <string name="title_activity_welcome">Welcome Screen</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="title_activity_register">User Registration</string>
    <string name="register_success">You have been successfully registered.</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="return_welcome">Return</string>
    <string name="logout">Logout</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_progress_signing_in">Signing in</string>
    <string name="employee_name">John Doe</string>
    <string name="employee_number">A00733263</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="goto_timesheet">Go to Time Sheet</string>

    <string-array name="projects_array">
        <item>PR001</item>
        <item>PR002</item>
        <item>PR003</item>
    </string-array>
    <string-array name="wp_array">
        <item>1234567</item>
        <item>1234566</item>
        <item>1234333</item>
    </string-array>

    <string name="select_project">Select Project:</string>
    <string name="select_wp">Select Work Package:</string>
    <string name="title_activity_timesheet">Timesheet</string>
    <string name="title_section1">M</string>
    <string name="title_section2">Tu</string>
    <string name="title_section3">W</string>
    <string name="title_section4">Th</string>
    <string name="title_section5">F</string>
    <string name="title_section6">S</string>
    <string name="title_section7">S</string>
    
    <string name="save">Save</string>
    <string name="sign_submit">Sign and Submit</string>
    
    <string name="work_package">Work Package:</string>
    <string name="wp_name">WP Name</string>

</resources>
